Naprawa ostrzeżeń sonarlint, usunięcie nieużytków