@@ -17,6 +17,18 @@ import org.springframework.transaction.annotation.Transactional;
 @Profile({"dev", "local", "prod"})
 public class ClinicAssortmentItemSeeder implements Seeder {
 
+  private static final String CATEGORY_ANTIBIOTICS = "Antybiotyki";
+  private static final String CATEGORY_DRESSING_MATERIALS = "Materiały opatrunkowe";
+
+  private static final String UNIT_PACKAGE = "opakowanie";
+  private static final String UNIT_BOTTLE = "butelka";
+  private static final String UNIT_TABLET = "tabletka";
+
+  private static final String STATUS_PENDING = "PENDING";
+  private static final String STATUS_IN_PROGRESS = "IN_PROGRESS";
+  private static final String STATUS_SHIPPED = "SHIPPED";
+  private static final String STATUS_DELIVERED = "DELIVERED";
+
   private final ClinicRepository clinicRepository;
   private final ClinicAssortmentItemRepository clinicAssortmentItemRepository;
 
@@ -43,31 +55,31 @@ public class ClinicAssortmentItemSeeder implements Seeder {
         clinics.stream()
             .filter(c -> c.getClinicName().contains("Warszawa"))
             .findFirst()
-            .orElse(clinics.get(0));
+            .orElse(clinics.getFirst());
 
     Clinic krakow =
         clinics.stream()
             .filter(c -> c.getClinicName().contains("Kraków"))
             .findFirst()
-            .orElse(clinics.get(0));
+            .orElse(clinics.getFirst());
 
     List<ClinicAssortmentItem> items =
         List.of(
             ClinicAssortmentItem.builder()
                 .clinic(warszawa)
                 .name("Amoksycylina 500mg")
-                .category("Antybiotyki")
+                .category(CATEGORY_ANTIBIOTICS)
                 .amount(20)
-                .unit("opakowanie")
-                .status("PENDING")
+                .unit(UNIT_PACKAGE)
+                .status(STATUS_PENDING)
                 .build(),
             ClinicAssortmentItem.builder()
                 .clinic(warszawa)
                 .name("Bandaż elastyczny")
-                .category("Materiały opatrunkowe")
+                .category(CATEGORY_DRESSING_MATERIALS)
                 .amount(50)
                 .unit("rolka")
-                .status("IN_PROGRESS")
+                .status(STATUS_IN_PROGRESS)
                 .build(),
             ClinicAssortmentItem.builder()
                 .clinic(warszawa)
@@ -75,7 +87,7 @@ public class ClinicAssortmentItemSeeder implements Seeder {
                 .category("Środki ochrony")
                 .amount(100)
                 .unit("para")
-                .status("SHIPPED")
+                .status(STATUS_SHIPPED)
                 .build(),
             ClinicAssortmentItem.builder()
                 .clinic(warszawa)
@@ -83,7 +95,7 @@ public class ClinicAssortmentItemSeeder implements Seeder {
                 .category("Sprzęt jednorazowy")
                 .amount(200)
                 .unit("szt")
-                .status("PENDING")
+                .status(STATUS_PENDING)
                 .build(),
             ClinicAssortmentItem.builder()
                 .clinic(warszawa)
@@ -91,31 +103,31 @@ public class ClinicAssortmentItemSeeder implements Seeder {
                 .category("Sprzęt jednorazowy")
                 .amount(500)
                 .unit("szt")
-                .status("PENDING")
+                .status(STATUS_PENDING)
                 .build(),
             ClinicAssortmentItem.builder()
                 .clinic(warszawa)
                 .name("Płyn Ringera 500ml")
                 .category("Płyny infuzyjne")
                 .amount(30)
-                .unit("butelka")
-                .status("IN_PROGRESS")
+                .unit(UNIT_BOTTLE)
+                .status(STATUS_IN_PROGRESS)
                 .build(),
             ClinicAssortmentItem.builder()
                 .clinic(warszawa)
                 .name("Gaza opatrunkowa")
-                .category("Materiały opatrunkowe")
+                .category(CATEGORY_DRESSING_MATERIALS)
                 .amount(80)
-                .unit("opakowanie")
-                .status("DELIVERED")
+                .unit(UNIT_PACKAGE)
+                .status(STATUS_DELIVERED)
                 .build(),
             ClinicAssortmentItem.builder()
                 .clinic(warszawa)
                 .name("Metronidazol 250mg")
-                .category("Antybiotyki")
+                .category(CATEGORY_ANTIBIOTICS)
                 .amount(40)
-                .unit("tabletka")
-                .status("PENDING")
+                .unit(UNIT_TABLET)
+                .status(STATUS_PENDING)
                 .build(),
             ClinicAssortmentItem.builder()
                 .clinic(warszawa)
@@ -123,12 +135,12 @@ public class ClinicAssortmentItemSeeder implements Seeder {
                 .category("Suplementy")
                 .amount(60)
                 .unit("ampułka")
-                .status("SHIPPED")
+                .status(STATUS_SHIPPED)
                 .build(),
             ClinicAssortmentItem.builder()
                 .clinic(warszawa)
                 .name("Plaster opatrunkowy")
-                .category("Materiały opatrunkowe")
+                .category(CATEGORY_DRESSING_MATERIALS)
                 .amount(150)
                 .unit("szt")
                 .status("REJECTED")
@@ -138,8 +150,8 @@ public class ClinicAssortmentItemSeeder implements Seeder {
                 .name("Chlorheksydyna 0,5%")
                 .category("Dezynfekcja")
                 .amount(10)
-                .unit("butelka")
-                .status("PENDING")
+                .unit(UNIT_BOTTLE)
+                .status(STATUS_PENDING)
                 .build(),
             ClinicAssortmentItem.builder()
                 .clinic(warszawa)
@@ -147,7 +159,7 @@ public class ClinicAssortmentItemSeeder implements Seeder {
                 .category("Akcesoria")
                 .amount(5)
                 .unit("szt")
-                .status("IN_PROGRESS")
+                .status(STATUS_IN_PROGRESS)
                 .build(),
             ClinicAssortmentItem.builder()
                 .clinic(warszawa)
@@ -155,39 +167,39 @@ public class ClinicAssortmentItemSeeder implements Seeder {
                 .category("Materiały diagnostyczne")
                 .amount(20)
                 .unit("rolka")
-                .status("DELIVERED")
+                .status(STATUS_DELIVERED)
                 .build(),
             ClinicAssortmentItem.builder()
                 .clinic(warszawa)
                 .name("Laktuloza 667mg")
                 .category("Gastroenterologia")
                 .amount(15)
-                .unit("opakowanie")
-                .status("PENDING")
+                .unit(UNIT_PACKAGE)
+                .status(STATUS_PENDING)
                 .build(),
             ClinicAssortmentItem.builder()
                 .clinic(warszawa)
                 .name("Furosemid 40mg")
                 .category("Kardiologia")
                 .amount(100)
-                .unit("tabletka")
-                .status("SHIPPED")
+                .unit(UNIT_TABLET)
+                .status(STATUS_SHIPPED)
                 .build(),
             ClinicAssortmentItem.builder()
                 .clinic(krakow)
                 .name("Karprogen 50mg")
                 .category("Leki przeciwbólowe")
                 .amount(30)
-                .unit("tabletka")
-                .status("PENDING")
+                .unit(UNIT_TABLET)
+                .status(STATUS_PENDING)
                 .build(),
             ClinicAssortmentItem.builder()
                 .clinic(krakow)
                 .name("Krople do uszu 10ml")
                 .category("Dermatologia")
                 .amount(10)
-                .unit("butelka")
-                .status("DELIVERED")
+                .unit(UNIT_BOTTLE)
+                .status(STATUS_DELIVERED)
                 .build(),
             ClinicAssortmentItem.builder()
                 .clinic(krakow)
@@ -195,15 +207,15 @@ public class ClinicAssortmentItemSeeder implements Seeder {
                 .category("Szczepionki")
                 .amount(12)
                 .unit("dawka")
-                .status("PENDING")
+                .status(STATUS_PENDING)
                 .build(),
             ClinicAssortmentItem.builder()
                 .clinic(krakow)
                 .name("Deksametazon 2mg")
                 .category("Steroidy")
                 .amount(50)
-                .unit("tabletka")
-                .status("IN_PROGRESS")
+                .unit(UNIT_TABLET)
+                .status(STATUS_IN_PROGRESS)
                 .build(),
             ClinicAssortmentItem.builder()
                 .clinic(krakow)
@@ -211,23 +223,23 @@ public class ClinicAssortmentItemSeeder implements Seeder {
                 .category("Sprzęt medyczny")
                 .amount(3)
                 .unit("szt")
-                .status("PENDING")
+                .status(STATUS_PENDING)
                 .build(),
             ClinicAssortmentItem.builder()
                 .clinic(krakow)
                 .name("Środek do dezynfekcji rąk")
                 .category("Dezynfekcja")
                 .amount(20)
-                .unit("butelka")
-                .status("SHIPPED")
+                .unit(UNIT_BOTTLE)
+                .status(STATUS_SHIPPED)
                 .build(),
             ClinicAssortmentItem.builder()
                 .clinic(krakow)
                 .name("Probiotyki dla psów")
                 .category("Gastroenterologia")
                 .amount(25)
-                .unit("opakowanie")
-                .status("PENDING")
+                .unit(UNIT_PACKAGE)
+                .status(STATUS_PENDING)
                 .build(),
             ClinicAssortmentItem.builder()
                 .clinic(krakow)
@@ -235,15 +247,15 @@ public class ClinicAssortmentItemSeeder implements Seeder {
                 .category("Gospodarka odpadami")
                 .amount(100)
                 .unit("szt")
-                .status("DELIVERED")
+                .status(STATUS_DELIVERED)
                 .build(),
             ClinicAssortmentItem.builder()
                 .clinic(krakow)
                 .name("Cefovecin 80mg")
-                .category("Antybiotyki")
+                .category(CATEGORY_ANTIBIOTICS)
                 .amount(8)
                 .unit("fiolka")
-                .status("IN_PROGRESS")
+                .status(STATUS_IN_PROGRESS)
                 .build(),
             ClinicAssortmentItem.builder()
                 .clinic(krakow)
